8229961: Assert failure in compiler/graalunit/HotspotTest.java

Reviewed-by: kvn