src/hotspot/share/jvmci/jniAccessMark.inline.hpp
@@ -25,6 +25,7 @@
 #ifndef SHARE_JVMCI_JNIACCESSMARK_INLINE_HPP
 #define SHARE_JVMCI_JNIACCESSMARK_INLINE_HPP
 
+#include "code/nmethod.hpp"
 #include "jvmci/jvmciEnv.hpp"
 #include "runtime/interfaceSupport.inline.hpp"
 
