test/hotspot/jtreg/compiler/jvmci/common/patches/jdk.internal.vm.ci/jdk/vm/ci/hotspot/CompilerToVMHelper.java
@@ -332,4 +332,15 @@ public class CompilerToVMHelper {
     public static HotSpotResolvedObjectType fromObjectClass(Class<?> theClass) {
           return (HotSpotResolvedObjectType) metaAccess.lookupJavaType(theClass);
     }
+
+    public static InstalledCode getInstalledCode(ResolvedJavaMethod method, String name, long address, long entryPoint) {
+        return new InstalledCodeStub((HotSpotResolvedJavaMethodImpl) method, name, address, entryPoint);
+    }
+    private static class InstalledCodeStub extends HotSpotNmethod {
+        private InstalledCodeStub(HotSpotResolvedJavaMethodImpl method, String name, long address, long entryPoint) {
+            super(method, name, false, 0);
+            this.address = address;
+            this.entryPoint = entryPoint;
+        }
+    }
 }
